Modified database connection

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
     "DatabaseConnection": {
-        "ConnectionString": "mongodb+srv://ericcui:a3tgSg0tVBJ9bhg5@cluster0.r6ela.mongodb.net/"
+        "ConnectionString": "mongodb+srv://ericcui:PLwHGs7g3jTPQntc@scheduler.r6ela.mongodb.net/"
     }
 }
